put back RAPI_WF

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,7 @@ build_flags =
   -D AMMETER
   -D RAPI
   -D RAPI_SERIAL
-  #-D RAPI_WF
+  -D RAPI_WF
   -D RAPI_BTN
   #-D TIME_LIMIT
   #-D CHARGE_LIMIT
