set default voltage to 230V for EU builds

--- a/platformio.ini
+++ b/platformio.ini
@@ -95,6 +95,7 @@ build_src_flags=
 extends = env:openevse
 build_src_flags=
   ${common.eu_build_flags}
+  -D MV_FOR_L2=230000L
   -D 'VERSION="${common.version}.EU"'
 
 # Non-tethered T2 EmonEVSE single-phase
@@ -103,6 +104,7 @@ extends = env:openevse
 build_src_flags=
   ${common.eu_build_flags}
   -D PP_AUTO_AMPACITY
+  -D MV_FOR_L2=230000L
   -D 'VERSION="${common.version}.T2"'
 
 # Non-tethered T2 EmonEVSE three-phase
