L2 default for EU

--- a/platformio.ini
+++ b/platformio.ini
@@ -40,6 +40,7 @@ eu_build_flags =
   -D MAX_CURRENT_CAPACITY_L2=32
   -D OVERCURRENT_THRESHOLD=5
   -D OVERCURRENT_TIMEOUT=10000UL
+  -D DEFAULT_SERVICE_LEVEL=2
 
 [env:openevse_1-8-3]
 platform = atmelavr@3.4.0
