--- a/platformio.ini
+++ b/platformio.ini
@@ -68,6 +68,16 @@ build_src_flags=
   ${common.us_build_flags}
   -D 'VERSION="${common.version}"'
 
+# v6 CGMI OpenEVSE
+[env:openevse_v6]
+extends = env:openevse
+build_src_flags=
+  ${common.eu_build_flags}
+  -D ENABLE_CGMI
+  -D NO_AUTOSVCLEVEL
+  -D DEFAULT_SERVICE_LEVEL=2
+  -D 'VERSION="${common.version}.CGMI"'
+
 # EU OpenEVSE
 [env:openevse_eu]
 extends = env:openevse
