--- a/.github/workflows/build_platformio.yml
+++ b/.github/workflows/build_platformio.yml
@@ -24,6 +24,9 @@ jobs:
           - env: openevse_eu
             python: 3.x
             platformio: 6.1.5 
+          - env: openevse_v6
+            python: 3.x
+            platformio: 6.1.5 
           - env: emonevse
             python: 3.x
             platformio: 6.1.5 
@@ -70,7 +73,7 @@ jobs:
         source ci/info_common.sh info.json
 
     - name: Upload output to GitHub
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: ${{ matrix.env }}
         path: |
