--- a/platformio.ini
+++ b/platformio.ini
@@ -72,7 +72,7 @@ build_src_flags=
 [env:openevse_v6]
 extends = env:openevse
 build_src_flags=
-  ${common.eu_build_flags}
+  ${common.us_build_flags}
   -D ENABLE_CGMI
   -D NO_AUTOSVCLEVEL
   -D DEFAULT_SERVICE_LEVEL=2
