--- a/platformio.ini
+++ b/platformio.ini
@@ -28,10 +28,11 @@ build_flags =
   #-D TIME_LIMIT
   #-D CHARGE_LIMIT
   -D MENNEKES_LOCK
-  -D BOOTLOCK
+  -D HEARTBEAT_SUPERVISION
 us_build_flags =
   ${common.build_flags}
   -D AUTOSVCLEVEL
+  #-D BOOTLOCK
 eu_build_flags =
   ${common.build_flags}
   -D NO_AUTOSVCLEVEL
@@ -76,6 +77,8 @@ build_src_flags=
   -D ENABLE_CGMI
   -D NO_AUTOSVCLEVEL
   -D DEFAULT_SERVICE_LEVEL=2
+  #-D BTN_MENU
+  #-D RTC
   -D 'VERSION="${common.version}.CGMI"'
 
 # EU OpenEVSE
