--- a/platformio.ini
+++ b/platformio.ini
@@ -17,18 +17,11 @@ upload_protocol = usbasp
 upload_flags = "-e -B0.5"
 version = 8.2.3
 build_flags =
-  -D OEV6
-  -D RELAY_PWM
   -D SHOW_DISABLED_TESTS
-  -D AMMETER
   -D RAPI
   -D RAPI_SERIAL
-  -D RAPI_WF
   -D RAPI_BTN
-  #-D TIME_LIMIT
-  #-D CHARGE_LIMIT
-  -D MENNEKES_LOCK
-  -D BOOTLOCK
+  -D NO_AUTOSVCLEVEL
 us_build_flags =
   ${common.build_flags}
   -D AUTOSVCLEVEL
@@ -36,61 +29,24 @@ eu_build_flags =
   ${common.build_flags}
   -D NO_AUTOSVCLEVEL
   -D PERIODIC_LCD_REFRESH_MS=120000UL
-  -D DEFAULT_CURRENT_CAPACITY_L2=32
-  -D MAX_CURRENT_CAPACITY_L2=32
+  -D DEFAULT_CURRENT_CAPACITY_L2=16
+  -D MAX_CURRENT_CAPACITY_L2=16
   -D OVERCURRENT_THRESHOLD=5
   -D OVERCURRENT_TIMEOUT=10000UL
   -D DEFAULT_SERVICE_LEVEL=2
+  -D THREEPHASE
+  -D MV_FOR_L2=230000L
+  -D MV_FOR_L1=230000L
+  -D I2CLCD
 
-[env:openevse_1-8-3]
-platform = atmelavr@3.4.0
-board = openevse
-framework = arduino
-lib_deps = ${common.lib_deps}
-upload_protocol = ${common.upload_protocol}
-upload_flags = ${common.upload_flags}
-build_src_flags=
-  ${common.us_build_flags}
 
 [env:openevse_latest]
 platform = atmelavr
 board = openevse
+board_build.f_cpu = 8000000UL
 framework = arduino
 lib_deps = ${common.lib_deps}
 upload_protocol = ${common.upload_protocol}
 upload_flags = ${common.upload_flags}
 build_src_flags=
-  ${common.us_build_flags}
-
-[env:openevse]
-extends = env:openevse_1-8-3
-build_src_flags=
-  ${common.us_build_flags}
-  -D 'VERSION="${common.version}"'
-
-# EU OpenEVSE
-[env:openevse_eu]
-extends = env:openevse
-build_src_flags=
   ${common.eu_build_flags}
-  -D MV_FOR_L2=230000L
-  -D 'VERSION="${common.version}.EU"'
-
-# Non-tethered T2 EmonEVSE single-phase
-[env:emonevse]
-extends = env:openevse
-build_src_flags=
-  ${common.eu_build_flags}
-  -D PP_AUTO_AMPACITY
-  -D MV_FOR_L2=230000L
-  -D 'VERSION="${common.version}.T2"'
-
-# Non-tethered T2 EmonEVSE three-phase
-# Deprecated, unneeded with wifi fw > 4.1.7
-; [env:emonevse_3ph]
-; extends = env:openevse
-; build_src_flags=
-;   ${common.eu_build_flags}
-;   -D PP_AUTO_AMPACITY
-;   -D THREEPHASE
-;   -D 'VERSION="${common.version}.3P"'
